stop wrap on friends list

--- a/war/css/wp.css
+++ b/war/css/wp.css
@@ -6,6 +6,14 @@
 .wp-invisible {overflow:none;float:right;visibility:hidden; height:0; padding:0; margin:0}
 .up {color:green; }
 .down {color:red; }
+.wp-points{
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+    margin-top:20px;
+    float:right;
+    margin-right:20px;
+}
 .wp-status {float:right; padding:2px 25px 10px;font-size:small}
 .wp-date  {float:left; padding:2px 0 10px 25px;font-size:small}
 .wp-footer{float:left; padding:0 0 10px 25px;font-size:small;}
